--- a/core/src/main/resources/fu-api/admin/index.html
+++ b/core/src/main/resources/fu-api/admin/index.html
@@ -9,10 +9,10 @@
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <link rel="stylesheet" title="default" href="../amis/sdk/sdk.css" />
-    <!-- <link rel="stylesheet" href="public/amis/sdk/helper.css" /> -->
-    <script src="../amis/sdk/sdk.js"></script>
-    <script src="public/vue2.js"></script>
+    <link rel="stylesheet" title="default" href="../public/amis/sdk/sdk.css" />
+    <!-- <link rel="stylesheet" href="../public/amis/sdk/helper.css" /> -->
+    <script src="../public/amis/sdk/sdk.js"></script>
+    <script src="../public/vue2.js"></script>
     <style>
       html,
       body,
@@ -34,7 +34,7 @@
         const app0 = {
           type: "app",
           brandName: "Admin",
-          logo: "public/logo.png",
+          logo: "logo.png",
           header: {
             type: "tpl",
             inline: false,
