--- a/core/src/main/resources/fu-api/admin/index.html
+++ b/core/src/main/resources/fu-api/admin/index.html
@@ -9,10 +9,18 @@
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <link rel="stylesheet" title="default" href="../public/amis/sdk/sdk.css" />
-    <link rel="stylesheet" href="../public/amis/sdk/helper.css" />
+
+    <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="../public/amis/sdk/cxd2.css" title="cxd" />
     <script src="../public/amis/sdk/sdk.js"></script>
+
+    <!--
+    <link rel="stylesheet" href="../public/amis/sdk/helper.css" />
     <script src="../public/vue2.js"></script>
+    -->
+
+
     <style>
       html,
       body,
@@ -122,7 +130,7 @@
 
               return pathname === link;
             },
-            theme: 'default'
+            theme: 'cxd'
           }
         );
       })();
