--- a/core/src/main/resources/fu-api/design/index.html
+++ b/core/src/main/resources/fu-api/design/index.html
@@ -8,7 +8,7 @@
   <meta name="renderer" content="webkit" />
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"/>
 
-  <link type="image/x-icon" rel="shortcut icon" href="favicon.ico">
+  <link type="image/x-icon" rel="shortcut icon" href="../public/favicon.ico">
 
   <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../public/amis/sdk/cxd2.css" title="cxd"/>
