--- a/core/src/main/resources/fu-api/document/application.html
+++ b/core/src/main/resources/fu-api/document/application.html
@@ -12,6 +12,7 @@
 
     <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../public/amis/sdk/cxd2.css" title="cxd"/>
+    <link rel="stylesheet" href="../public/amis/my.css"/>
 
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="../public/amis/sdk/sdk.js"></script>
@@ -32,29 +33,6 @@
         margin: 0;
         padding: 0;
       }
-
-    /* 在Editor属性中加 {"size":"ss"} 则高度在100-800之间自动伸缩 */
-    .amis-scope .cxd-EditorControl--ss {
-      min-height: 100px;
-      max-height: 800px;
-    }
-
-    .amis-scope .cxd-EditorControl--ss > .cxd-MonacoEditor {
-      min-height: 100px;
-      max-height: 800px;
-    }
-
-    .amis-scope .cxd-EditorControl--full {
-      min-height: 100%;
-      max-height: 100%;
-    }
-
-    .amis-scope .cxd-EditorControl--full > .cxd-MonacoEditor {
-      min-height: 100%;
-      max-height: 100%;
-    }
-
-
     </style>
 </head>
 <body>
