--- a/core/src/main/resources/fu-api/design/index.html
+++ b/core/src/main/resources/fu-api/design/index.html
@@ -62,18 +62,17 @@
 
     const app = {
       type: 'app',
-      brandName: 'Admin',
+      brandName: 'FU-API',
       logo: '../public/logo.png',
       header: {
         type: 'tpl',
         inline: false,
         className: 'w-full',
-        tpl:
-          '<div class="flex justify-between"><div>顶部区域左侧</div><div>顶部区域右侧</div></div>'
+        tpl:''
       },
-      // footer: '<div class="p-2 text-center bg-light">底部区域</div>',
-      // asideBefore: '<div class="p-2 text-center">菜单前面区域</div>',
-      // asideAfter: '<div class="p-2 text-center">菜单后面区域</div>',
+       //footer: '<div class="p-2 text-center bg-light"></div>',
+       //asideBefore: '<div class="p-2 text-center"></div>',
+       //asideAfter: '<div class="p-2 text-center"></div>',
       api: 'menu.jt'
     };
 
