--- a/core/src/main/resources/fu-api/document/index.html
+++ b/core/src/main/resources/fu-api/document/index.html
@@ -46,7 +46,7 @@
 
 <script type="text/javascript">
 
-    const pageUrl = window.location.href.replace("\.html",".jview");
+    const pageUrl = window.location.href.replace("\.html",".jpage");
     let amisConfig = {
 
         // 全局 api 适配器。
