--- a/core/src/main/resources/fu-api/design/index.html
+++ b/core/src/main/resources/fu-api/design/index.html
@@ -12,7 +12,7 @@
 
   <!--
     <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-   -->
+
 
   <link rel="stylesheet" href="../public/amis/sdk1.1.7/cxd.css" title="cxd"/>
   <link rel="stylesheet" href="../public/amis/sdk1.1.7/helper.css"/>
@@ -26,7 +26,19 @@
   <script src="../public/amis/sdk1.1.7/sdk.js"></script>
   <script src="../public/vue2.js"></script>
   <script src="../public/unsupported-ie.js"></script>
+   -->
 
+  <link rel="stylesheet" href="http://ldx4joss.oss-cn-shenzhen.aliyuncs.com/common/html/amis/sdk1.2.3/cxd.css" title="cxd"/>
+  <link rel="stylesheet" href="http://ldx4joss.oss-cn-shenzhen.aliyuncs.com/common/html/amis/sdk1.2.3/helper.css"/>
+  <link rel="stylesheet" href="http://ldx4joss.oss-cn-shenzhen.aliyuncs.com/common/html/amis/sdk1.2.3/sdk.css"/>
+  <link rel="stylesheet" href="http://ldx4joss.oss-cn-shenzhen.aliyuncs.com/common/html/amis/my.css"/>
+
+  <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+  <script src="http://ldx4joss.oss-cn-shenzhen.aliyuncs.com/common/html/amis/sdk1.2.3/sdk.js"></script>
+  <script src="http://ldx4joss.oss-cn-shenzhen.aliyuncs.com/common/html/amis/sdk1.2.3/markdown.js"></script>
+  <script src="http://ldx4joss.oss-cn-shenzhen.aliyuncs.com/common/html/vue2.js"></script>
+  <script src="http://ldx4joss.oss-cn-shenzhen.aliyuncs.com/common/html/unsupported-ie.js"></script>
 
   <style>
       html,
